correction in alignment

--- a/src/components/Pages/Contact/Contact.scss
+++ b/src/components/Pages/Contact/Contact.scss
@@ -60,6 +60,6 @@ span {
 }
 
 .social_img {
-    width: 50px;
+    width: 2rem;
     padding: 3px;
 }
